force-app/main/default/objects/Legal_Updates__c/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <description>type of legal update- search warrant, MOU, petition for custody</description>
    <inlineHelpText>Please select what this update is relevant to.</inlineHelpText>
    <label>Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affidavit</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Case Tracking</fullName>
            </value>
            <value>
                <fullName>Civil Proceeding</fullName>
            </value>
            <value>
                <fullName>Deposition</fullName>
            </value>
            <value>
                <fullName>Grand Jury</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Investigation Related</fullName>
            </value>
            <value>
                <fullName>Memo</fullName>
            </value>
            <value>
                <fullName>Motions</fullName>
            </value>
            <value>
                <fullName>General Update</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Petition</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
                <label>Prep</label>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>MOU</fullName>
                <isActive>false</isActive>
                <label>MOU</label>
            </value>
            <value>
                <fullName>Media</fullName>
                <isActive>false</isActive>
                <label>Media</label>
            </value>
            <value>
                <fullName>Petition for Custody</fullName>
                <isActive>false</isActive>
                <label>Petition for Custody</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Restitution Hearing</fullName>
                <isActive>false</isActive>
                <label>Restitution Hearing</label>
            </value>
            <value>
                <fullName>Search Warrant</fullName>
                <isActive>false</isActive>
                <label>Search Warrant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>