force-app/main/default/objects/Legal_Updates__c/fields/Warrant_Address__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Warrant Address for the search and/or seizure- should match to a scene address from the case details.</description>
    <inlineHelpText>Warrant Address for the search and/or seizure- should match to a scene address from the case details.</inlineHelpText>
    <label>Warrant Address</label>
    <referenceTo>Scene_Locations__c</referenceTo>
    <relationshipLabel>Legal Updates</relationshipLabel>
    <relationshipName>Legal_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>