force-app/main/default/objects/Legal_Updates__c/fields/Warrant_Edits_Due__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Edits_Due__c</fullName>
    <description>Date warrant edits are due from Legal Advocacy Counsel</description>
    <inlineHelpText>What date should LA edits be done?</inlineHelpText>
    <label>Warrant Edits Due</label>
    <type>Date</type>
</CustomField>