force-app/main/default/objects/Legal_Updates__c/fields/Warrant_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Return_Date__c</fullName>
    <label>Warrant Return Date</label>
    <type>Date</type>
</CustomField>