force-app/main/default/objects/Legal_Updates__c/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <label>Witness</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kathryn Destreza</fullName>
            </value>
            <value>
                <fullName>Kyle Held</fullName>
            </value>
            <value>
                <fullName>Terry Mills</fullName>
            </value>
            <value>
                <fullName>Dr. Nicole Eller</fullName>
            </value>
            <value>
                <fullName>Dr. Kristine Baucom</fullName>
            </value>
            <value>
                <fullName>Dr. Rachel Touroo</fullName>
            </value>
            <value>
                <fullName>Molly White</fullName>
            </value>
            <value>
                <fullName>Amanda Fitch</fullName>
            </value>
            <value>
                <fullName>Dr. Pam Reid</fullName>
            </value>
            <value>
                <fullName>Dr. Katherine Miller</fullName>
            </value>
            <value>
                <fullName>Bekah Weitz</fullName>
            </value>
            <value>
                <fullName>Leigh Anne Garrard</fullName>
            </value>
            <value>
                <fullName>Dr. Rob Reisman</fullName>
            </value>
            <value>
                <fullName>Christina Lee</fullName>
            </value>
            <value>
                <fullName>Dr. Elizabeth Pearlman</fullName>
            </value>
            <value>
                <fullName>Adam Leath</fullName>
                <isActive>false</isActive>
                <label>Adam Leath</label>
            </value>
            <value>
                <fullName>John Bolin</fullName>
                <isActive>false</isActive>
                <label>John Bolin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>