force-app/main/default/objects/Legal_Updates__c/recordTypes/Adoption_Contract.recordType-meta.xml
<RecordType>
    <fullName>Adoption_Contract</fullName>
    <active>true</active>
    <description>Contract that transfers ownership of an animal from the ASPCA to an individual.</description>
    <label>Adoption Contract</label>
</RecordType>