force-app/main/default/objects/Legal_Updates__c/recordTypes/Affidavit.recordType-meta.xml
<RecordType>
    <fullName>Affidavit</fullName>
    <active>true</active>
    <description>Relating to any sworn, written statement for use in court.</description>
    <label>Affidavit</label>
</RecordType>