force-app/main/default/objects/Legal_Updates__c/recordTypes/Boarding_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Boarding_Agreement</fullName>
    <active>true</active>
    <description>These typically are the Boarding, Foster or Placement agreements</description>
    <label>Agreements</label>
</RecordType>