force-app/main/default/objects/Legal_Updates__c/recordTypes/Civil_Court_Procedure.recordType-meta.xml
<RecordType>
    <fullName>Civil_Court_Procedure</fullName>
    <active>true</active>
    <description>Any civil court proceeding as a result of the case.</description>
    <label>Civil Proceeding</label>
</RecordType>