force-app/main/default/objects/Legal_Updates__c/recordTypes/Expert_Report.recordType-meta.xml
<RecordType>
    <fullName>Expert_Report</fullName>
    <active>true</active>
    <description>Relates to a request for an ASPCA expert witness</description>
    <label>Expert Witness Request</label>
</RecordType>