force-app/main/default/objects/Legal_Updates__c/recordTypes/General_Update.recordType-meta.xml
<RecordType>
    <fullName>General_Update</fullName>
    <active>true</active>
    <description>For general notes, activities or other information related to a case.</description>
    <label>General Update</label>
</RecordType>