force-app/main/default/objects/Legal_Updates__c/recordTypes/MOU_Updates.recordType-meta.xml
<RecordType>
    <fullName>MOU_Updates</fullName>
    <active>true</active>
    <description>Relating to any Memorandum of Understanding with outside agencies.</description>
    <label>MOU</label>
</RecordType>