force-app/main/default/objects/Legal_Updates__c/recordTypes/Public_Records_Request.recordType-meta.xml
<RecordType>
    <fullName>Public_Records_Request</fullName>
    <active>true</active>
    <description>Relates to all requests for public documents.</description>
    <label>Public Records Request</label>
</RecordType>