force-app/main/default/objects/Legal_Updates__c/recordTypes/Search_Warrant.recordType-meta.xml
<RecordType>
    <fullName>Search_Warrant</fullName>
    <active>true</active>
    <description>For any activities related to the drafting or reviewing of a search warrant, or related hearings.</description>
    <label>Search Warrant</label>
</RecordType>