force-app/main/default/objects/Legal_Updates__c/recordTypes/Trial_Activities.recordType-meta.xml
<RecordType>
    <fullName>Trial_Activities</fullName>
    <active>true</active>
    <description>For all trial related activities from pre-trial work through post trial.</description>
    <label>Trial Activities</label>
</RecordType>