force-app/main/default/objects/Legal_Updates__c/listViews/Legal_Updates.listView-meta.xml
<ListView>
    <fullName>Legal_Updates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Legal Updates</label>
</ListView>